# SPDX-License-Identifier: LGPL-3.0-or-later OR LicenseRef-watching-zenoh-Commercial
# SPDX-FileCopyrightText: Copyright (c) 2026 newmassrael
#
# wz — top-level facade crate for the watching-zenoh composable
# framework. Single user-facing anchor that exposes the full feature
# catalog defined in docs/feature_inventory.md (R301 catalog ratify).
#
# Layout per R302 design fork:
#   - 144 atomic features (19 domains, kebab-case <domain>-<capability>)
#   - 19 domain-aggregate features (union of each domain's atomic set)
#   - 6 preset features (v0.1.0 semver-named contracts, each = explicit
#     atomic list; no preset-extends-preset so a frozen v0.1.0 contract
#     stays stable under future catalog growth)
#
# Implication edges encode only "requires X" / "builds on X" pulled
# from the inventory reason field. Cargo features are monotone-
# additive — "mutually exclusive" relationships (platform-bare-metal vs
# platform-linux, runtime-no-std vs runtime-tokio) are policy checks
# deferred to a future `cargo wz-config inspect` tool, not encoded as
# rejects in Cargo.toml.
#
# default = [] (no-default). Composable-framework contract: the user
# explicitly opts into a preset (or hand-rolls atomic features). This
# differs from batteries-included crates like `tokio` that ship a
# default feature set, and matches kconfig / NixOS USE / Buildroot
# semantics where the user authors the config.
#
# R302a scope: facade Cargo.toml + empty lib.rs. No #[cfg(feature)]
# gates inserted anywhere yet — all features compile to no-ops. R302b+
# will start wiring real `#[cfg]` gates inside wz-runtime-tokio
# sources and exposing forwarded modules from wz/src/lib.rs.

[package]
name = "wz"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
description = "watching-zenoh top-level facade — composable Zenoh feature catalog with v0.1.0 preset contracts."

[lib]
name = "wz"
path = "src/lib.rs"

[lints]
workspace = true

# R302b — wz-runtime-tokio enters the facade as an OPTIONAL dependency
# with default-features = false. The forwarding rules below decide
# which wz-runtime-tokio features get enabled based on which wz
# features the consumer selects. Consumers who enable `runtime-tokio`
# pull the crate at all; consumers who additionally enable
# `liveliness-token` / `liveliness-subscriber` get the gated symbols
# inside wz-runtime-tokio. Other facade features stay no-op labels
# until their owning sub-crate enters the workspace in future R302c+
# rounds.
#
# R311a4 — facade gains wz-runtime-core + sce-rust-runtime + sce-rust-lua
# as optional deps so the `runtime-tokio` feature pulls every sub-crate
# wz-ap-demo previously named directly. The companion wz-ap-demo
# refactor collapses 6 direct deps to a single `wz = { features = …
# preset-ap-client … }`, making the facade the first user-visible
# composable-framework boundary backed by a real Linux + tokio binary.

[dependencies]
wz-runtime-tokio = { path = "../wz-runtime-tokio", optional = true, default-features = false }
wz-runtime-core = { path = "../wz-runtime-core", optional = true, default-features = false, features = ["alloc"] }
# R311ax — wz-runtime-lwip enters the facade as an optional dep.
# The `runtime-lwip` feature pulls this crate with its `alloc`
# feature on; lwIP's runtime-services-tier (LwipRuntime + LwipTime
# + sync::Mutex aliases) becomes available at `wz::runtime_lwip::*`
# when the consumer opts in. Mutual exclusion with `runtime-tokio`
# is enforced via a compile_error! gate in `src/lib.rs`.
wz-runtime-lwip = { path = "../wz-runtime-lwip", optional = true, default-features = false }
# R311az-3a — wz-link-lwip enters the facade as an optional dep
# pulled in by the `runtime-lwip` feature. The link tier (§5.C) is
# coupled to the runtime profile in the wz architecture: `runtime-lwip`
# on means "MCU profile = LwipRuntime + lwIP-based link". wz-link-lwip
# has a `#![cfg(not(target_os = "none"))]` crate-level gate so cross-
# compile to bare-metal targets sees an empty crate (the lwip-sys C
# build is host-only at R311az-1; R311az-3b extends it to accept
# deploy-supplied lwipopts.h for cross-compile).
wz-link-lwip = { path = "../wz-link-lwip", optional = true, default-features = false }
# R311az-3b-ii — direct optional dep on lwip-sys so the facade's
# build.rs receives `DEP_LWIP_LWIP_REAL_BUILD` (re-exposed via lwIP-sys's
# `links = "lwip"` metadata). This lets the facade emit a
# `lwip_real_build` cfg in lockstep with wz-link-lwip, keeping the
# `wz::link_lwip` namespace re-export gated on the same condition as
# the underlying crate body. Without this direct edge the metadata
# would propagate to wz-link-lwip only (siblings don't share the env
# var), and the facade would have to re-derive the WZ_LWIP_PORT +
# TARGET logic — a second source of truth, anti-pattern.
lwip-sys = { path = "../lwip-sys", optional = true }
sce-rust-runtime = { path = "../../vendor/sce/sce-rust-runtime", optional = true }
sce-rust-lua = { path = "../../vendor/sce/sce-rust-lua", optional = true }

# ============================================================
# [features] — 169 entries per R301 catalog
# ============================================================

[features]
default = []

# ----- domain: access (6 atomic, all reserved) -----
access-acl = []
access-downsampling = []
access-extauth-jwt = ["session-extauth"]
access-extauth-pubkey = ["session-extauth"]
access-extauth-usrpwd = ["session-extauth"]
access-quota = []

# ----- domain: attachment (2 atomic, all reserved) -----
attachment-bytes = []
attachment-encoding-aware = ["attachment-bytes"]

# ----- domain: codec (14 atomic, all active) -----
# R311a-recanon collapsed codec-{init,open}-{syn,ack} 4 entries into 2
# codec-{init,open}-body entries (single SCXML emit unit per body,
# Footprint test honour). R311a4 propagated the reshape from
# docs/feature_inventory.md to this Cargo.toml + the 6 preset
# definitions + domain-codec aggregate below.
#
# R311a4 — codec-init-body / codec-open-body forward into wz-runtime-
# tokio via cargo `?` syntax (forward only when runtime-tokio is also
# active). Same pattern as R307/R309 query + declare domain forwards.
# Each gate elides the matching SCXML codegen + InboundFrame variant +
# session_glue parse/handle path; quantitative footprint delta is
# measured against the wz-ap-demo binary in the R311a4 audit entry.
codec-close = ["wz-runtime-tokio?/codec-close"]
# R311i — codec-declare forwards wz-runtime-tokio (pulls
# wz-codecs/codec-declare + codec-frame imply). Feature-off elides
# the wz-runtime-tokio Declare wire surface + the 9 declare-family
# wz-codecs modules. Consumer module (declare/, pubsub.rs
# absorb_declare) stays compiled — R311m cascade for the consumer
# side.
codec-declare = ["wz-runtime-tokio?/codec-declare"]
codec-fragment = ["transport-fragmentation", "wz-runtime-tokio?/codec-fragment"]
# R311g — codec-frame forwards into wz-runtime-tokio gating the Frame
# envelope inbound decode path (`InboundFrame::Frame` variant +
# `parse_inbound` `T_MID_FRAME` arm + `parse_frame_payload` +
# downstream Frame match arms). Outbound `encode_frame_with_<body>`
# helpers stay always-on at R311g; R311h..R311k body-codec cascades
# (codec-push / codec-declare / codec-request / codec-response) will
# gate the outbound side AND add `codec-<body> = ["codec-frame"]`
# implications so codec-frame OFF becomes a coherent handshake-only
# deploy (Init / Open / Close + KeepAlive) once those land. Honest
# semantics for the R311g interim state and the eventual closure are
# spelled out in the wz-runtime-tokio + wz-codecs codec-frame comment
# blocks and the §5.12 codec atomic caveat.
codec-frame = ["wz-runtime-tokio?/codec-frame"]
codec-hello = ["wz-runtime-tokio?/codec-hello"]
codec-init-body = ["wz-runtime-tokio?/codec-init-body"]
codec-join = ["session-multicast", "wz-runtime-tokio?/codec-join"]
# R311b — codec-keep-alive forwards to wz-runtime-tokio (and through
# it to wz-codecs); elision drops the peer-driven lease refresh path
# along with the wire-mid 0x04 decoder. See §5.12 codec atomic caveat.
codec-keep-alive = ["wz-runtime-tokio?/codec-keep-alive"]
codec-open-body = ["wz-runtime-tokio?/codec-open-body"]
# R311h — codec-push forwards wz-runtime-tokio (which pulls
# wz-codecs/codec-push + codec-frame imply). Feature-off elides the
# Push wire emit + parse + 6 send_push_* methods + 8 build_push_*
# helpers + Push enum variant + pubsub.rs module entirely (pub mod
# pubsub at lib.rs is codec-push-gated because dispatch_push references
# the Push type directly). Honest semantics: feature-off = no pub/sub
# data carrier on the wire AND no in-process pubsub registry.
codec-push = ["wz-runtime-tokio?/codec-push"]
# R311j — codec-request forwards wz-runtime-tokio.
codec-request = ["wz-runtime-tokio?/codec-request"]
# R311k — codec-response forwards wz-runtime-tokio. After R311k all 4
# body codecs imply codec-frame so codec-frame OFF requires every body
# codec OFF (handshake-only deploy: Init / Open / Close + KeepAlive).
codec-response = ["wz-runtime-tokio?/codec-response"]
codec-response-final = ["wz-runtime-tokio?/codec-response-final"]
codec-scout = ["wz-runtime-tokio?/codec-scout"]

# ----- domain: declare (7 atomic, all active) -----
# R309 — 7 declare-domain features forwarded into wz-runtime-tokio via
# cargo `?` syntax (forward only when runtime-tokio is active). Each
# gates the matching `SessionLinkActions::send_*` wire-emit method in
# session_glue.rs. `declare-keyexpr = ["keyexpr-mapping", …]` keeps
# the pre-R309 facade-internal implication so the keyexpr aliasing
# subsystem stays coherent (mapping_id -> suffix table membership).
declare-final = ["wz-runtime-tokio?/declare-final"]
declare-interest = ["wz-runtime-tokio?/declare-interest"]
declare-keyexpr = ["keyexpr-mapping", "wz-runtime-tokio?/declare-keyexpr"]
declare-queryable = ["wz-runtime-tokio?/declare-queryable"]
declare-subscriber = ["wz-runtime-tokio?/declare-subscriber"]
declare-token = ["wz-runtime-tokio?/declare-token"]
declare-undeclare = ["wz-runtime-tokio?/declare-undeclare"]

# ----- domain: encoding (7 atomic, 3 active / 4 reserved) -----
encoding-bytes = []
encoding-cbor = []
encoding-empty = []
encoding-json = []
encoding-mime = []
encoding-protobuf = []
encoding-utf8 = []

# ----- domain: keyexpr (8 atomic, all active) -----
keyexpr-canon = []
keyexpr-dollar-star = []
keyexpr-includes = []
keyexpr-intersect = []
keyexpr-literal = []
keyexpr-mapping = []
keyexpr-wildcard-double = []
keyexpr-wildcard-single = []

# ----- domain: link (5 atomic, 3 active / 2 reserved) -----
link-batching = []
link-flow-control = []
link-fragment = ["transport-fragmentation"]
link-frame = []
link-tx-cache = []

# ----- domain: liveliness (5 atomic, 2 active / 3 reserved) -----
liveliness-get = ["query-get"]
liveliness-historical-samples = ["liveliness-history"]
liveliness-history = []
# R302b — first source-gated atomic features. Forward into
# wz-runtime-tokio iff the runtime-tokio feature is also enabled
# (cargo's `?` syntax: forward only if the optional crate is active).
liveliness-subscriber = ["wz-runtime-tokio?/liveliness-subscriber"]
liveliness-token = ["wz-runtime-tokio?/liveliness-token"]

# ----- domain: locator (9 atomic, 3 active / 6 reserved) -----
locator-iface = []
locator-quic = ["transport-link-quic"]
locator-serial = ["transport-link-serial"]
locator-tcp = []
locator-tls = ["transport-link-tls"]
locator-udp = []
locator-unixsock = ["transport-link-unixsock"]
locator-vsock = ["transport-link-vsock"]
locator-ws = ["transport-link-ws"]

# ----- domain: platform (7 atomic, 1 active / 6 reserved) -----
platform-bare-metal = []
platform-freertos = []
platform-linux = []
platform-macos = []
platform-qnx = []
platform-windows = []
platform-zephyr = []

# ----- domain: pubsub (11 atomic, 5 active / 6 reserved) -----
# R311cc — 5 active features forward to wz-runtime-tokio (-put/-delete
# msg body variants, -allow-loop loopback, -attachment / -timestamp
# Sample optional field populators). 6 reserved stay declaration-only.
pubsub-allow-loop = ["wz-runtime-tokio?/pubsub-allow-loop"]
pubsub-attachment = ["attachment-bytes", "wz-runtime-tokio?/pubsub-attachment"]
pubsub-congestion-control = []
pubsub-delete = ["wz-runtime-tokio?/pubsub-delete"]
pubsub-encoding = []
pubsub-express = []
pubsub-priority = ["session-extqos"]
pubsub-put = ["wz-runtime-tokio?/pubsub-put"]
pubsub-sample = []
pubsub-source-info = []
pubsub-timestamp = ["wz-runtime-tokio?/pubsub-timestamp"]

# ----- domain: query (10 atomic, 6 active / 4 reserved) -----
# R307 — six atomic features in the query domain forward into
# `wz-runtime-tokio` (cargo `?` syntax: only when runtime-tokio is
# also active). Internal implication edges live in
# `wz-runtime-tokio/Cargo.toml::[features]` (e.g. `query-get =
# ["query-reply"]`); the facade does not re-declare them so a future
# alternative runtime can implement its own dependency shape without
# the facade pre-committing to tokio-side semantics. `query-reply-err`
# / `query-selector-parameters` / `query-source-info` /
# `query-attachment` stay reserved (no source-level gate yet); they
# remain pure feature-labels until their runtime impls land.
query-attachment = ["attachment-bytes"]
query-consolidation = ["wz-runtime-tokio?/query-consolidation"]
query-get = ["wz-runtime-tokio?/query-get"]
query-queryable = ["wz-runtime-tokio?/query-queryable"]
query-reply = ["wz-runtime-tokio?/query-reply"]
query-reply-err = []
query-selector-parameters = []
query-source-info = []
query-target = ["wz-runtime-tokio?/query-target"]
query-timeout = ["wz-runtime-tokio?/query-timeout"]

# ----- domain: routing (6 atomic, 1 active / 5 reserved) -----
routing-client = []
routing-failover = ["routing-router"]
routing-peer = []
routing-router = []
routing-routes = ["routing-router"]
routing-static-routes = ["routing-router"]

# ----- domain: runtime (6 atomic, 2 active / 4 reserved) -----
runtime-async-std = []
# R311ax — runtime-lwip activates: pulls wz-runtime-lwip + wz-runtime-
# core (alloc-on) so a consumer enabling `runtime-lwip` gets the
# §5.P MCU profile end-to-end (LwipRuntime + LwipTime + sync::Mutex
# aliases). Mutual exclusion with `runtime-tokio` is enforced in
# `src/lib.rs` via `compile_error!` — the catalog cannot express
# mutex relations directly, but cfg(all(...)) attribute fires at
# build time if both runtimes are co-enabled. The check fails the
# build with a clear "pick one runtime per deploy" message rather
# than silently building a bin that links both runtimes.
runtime-lwip = [
    "dep:wz-runtime-lwip",
    "dep:wz-runtime-core",
    "wz-runtime-lwip/alloc",
    # R311az-3a / R311az-3b-ii — runtime-lwip pulls the §5.C link tier
    # sibling. The MCU profile bundles runtime + link as a pair:
    # `LwipRuntime` (task pool + cooperative poll) + `LwipUdpSocket`
    # (lwIP raw UDP + heapless mpsc bridge). cross-compile sees an
    # empty wz-link-lwip via its crate-level `#![cfg(lwip_real_build)]`
    # gate until WZ_LWIP_PORT is set (R311az-3b deploy-supplied
    # lwipopts.h) — at which point both wz-link-lwip and the
    # `wz::link_lwip` re-export light up together.
    "dep:wz-link-lwip",
    # R311az-3b-ii — direct lwip-sys edge so the facade build.rs
    # receives `DEP_LWIP_LWIP_REAL_BUILD` and emits `lwip_real_build`
    # in lockstep with wz-link-lwip.
    "dep:lwip-sys",
]
runtime-no-std = []
# R302b — runtime-tokio pulls the wz-runtime-tokio crate into the
# build via `dep:` syntax. Bare `runtime-tokio` with no sub-feature
# forwards (no liveliness-* etc.) leaves wz-runtime-tokio compiled
# with --no-default-features.
#
# R311a4 — runtime-tokio now also pulls wz-runtime-core (TimeSource +
# Allocator + RuntimeError trait surface, alloc-on by default since
# tokio implies std at the linker level) and the sce-rust-runtime +
# sce-rust-lua script engine pair (re-exported as `wz::script` for AP
# consumers). This collapses wz-ap-demo's 6 direct sub-crate deps to a
# single `wz = { features = preset-ap-client }`, making the facade the
# first user-visible composable-framework boundary backed by a real
# Linux + tokio binary.
runtime-tokio = [
    "dep:wz-runtime-tokio",
    "dep:wz-runtime-core",
    "dep:sce-rust-runtime",
    "dep:sce-rust-lua",
]
runtime-tokio-uring = ["runtime-tokio"]
runtime-zero-copy = []

# ----- domain: scouting (6 atomic, 1 active / 5 reserved) -----
scouting-active = []
scouting-autoconnect = []
scouting-gossip = ["routing-router"]
scouting-multicast = ["transport-link-udp"]
scouting-passive = []
scouting-static = []

# ----- domain: session (9 atomic, 2 active / 7 reserved) -----
session-extauth = []
session-extcompression = ["transport-compression"]
session-extqos = []
session-extshm = ["transport-shm"]
session-multicast = []
session-resumable = []
session-stateless-accept = []
# R311cd — session-unicast-* features forward to wz-runtime-tokio
# bind sites for accept-side / open-side SCXML script-actions.
session-unicast-accept = ["wz-runtime-tokio?/session-unicast-accept"]
session-unicast-open = ["wz-runtime-tokio?/session-unicast-open"]

# ----- domain: storage (4 atomic, all reserved) -----
storage-aligner = []
storage-backend = []
storage-history = ["storage-backend"]
storage-replication = ["storage-backend"]

# ----- domain: time (4 atomic, 2 active / 2 reserved) -----
time-hlc = []
time-ntp64 = []
time-system-clock = []
time-timestamp-source = []

# ----- domain: transport (16 atomic, 5 active / 11 reserved) -----
# R311cb — 5 active features forward to wz-runtime-tokio (TCP/UDP
# driver, unicast FSM, keepalive worker, INIT batch_size negotiation).
# 11 reserved features (link-tls/quic/ws/unixsock/vsock/serial,
# multicast, fragmentation, compression, shm, lowlatency) stay
# declaration-only — no wz-runtime-tokio counterpart exists yet, and
# adding a forward to a missing feature would surface as a Cargo
# resolver error. They land as wire-up cascades as their behavior
# arrives (e.g. session-multicast pulls transport-multicast, R311+).
transport-batching = ["wz-runtime-tokio?/transport-batching"]
transport-compression = []
transport-fragmentation = []
transport-keepalive = ["wz-runtime-tokio?/transport-keepalive"]
transport-link-quic = []
transport-link-serial = []
transport-link-tcp = ["wz-runtime-tokio?/transport-link-tcp"]
transport-link-tls = ["transport-link-tcp"]
transport-link-udp = ["wz-runtime-tokio?/transport-link-udp"]
transport-link-unixsock = []
transport-link-vsock = []
transport-link-ws = []
transport-lowlatency = []
transport-multicast = []
transport-shm = []
transport-unicast = ["wz-runtime-tokio?/transport-unicast"]

# ============================================================
# Domain aggregates (19 entries, each = union of domain's atomic set)
#
# Use a domain-aggregate when you want every capability in a domain
# without enumerating each atomic. Granular control: hand-pick atomic
# features. Curated combos: pick a preset.
# ============================================================

domain-access = [
    "access-acl",
    "access-downsampling",
    "access-extauth-jwt",
    "access-extauth-pubkey",
    "access-extauth-usrpwd",
    "access-quota",
]
domain-attachment = ["attachment-bytes", "attachment-encoding-aware"]
domain-codec = [
    "codec-close",
    "codec-declare",
    "codec-fragment",
    "codec-frame",
    "codec-hello",
    "codec-init-body",
    "codec-join",
    "codec-keep-alive",
    "codec-open-body",
    "codec-push",
    "codec-request",
    "codec-response",
    "codec-response-final",
    "codec-scout",
]
domain-declare = [
    "declare-final",
    "declare-interest",
    "declare-keyexpr",
    "declare-queryable",
    "declare-subscriber",
    "declare-token",
    "declare-undeclare",
]
domain-encoding = [
    "encoding-bytes",
    "encoding-cbor",
    "encoding-empty",
    "encoding-json",
    "encoding-mime",
    "encoding-protobuf",
    "encoding-utf8",
]
domain-keyexpr = [
    "keyexpr-canon",
    "keyexpr-dollar-star",
    "keyexpr-includes",
    "keyexpr-intersect",
    "keyexpr-literal",
    "keyexpr-mapping",
    "keyexpr-wildcard-double",
    "keyexpr-wildcard-single",
]
domain-link = [
    "link-batching",
    "link-flow-control",
    "link-fragment",
    "link-frame",
    "link-tx-cache",
]
domain-liveliness = [
    "liveliness-get",
    "liveliness-historical-samples",
    "liveliness-history",
    "liveliness-subscriber",
    "liveliness-token",
]
domain-locator = [
    "locator-iface",
    "locator-quic",
    "locator-serial",
    "locator-tcp",
    "locator-tls",
    "locator-udp",
    "locator-unixsock",
    "locator-vsock",
    "locator-ws",
]
domain-platform = [
    "platform-bare-metal",
    "platform-freertos",
    "platform-linux",
    "platform-macos",
    "platform-qnx",
    "platform-windows",
    "platform-zephyr",
]
domain-pubsub = [
    "pubsub-allow-loop",
    "pubsub-attachment",
    "pubsub-congestion-control",
    "pubsub-delete",
    "pubsub-encoding",
    "pubsub-express",
    "pubsub-priority",
    "pubsub-put",
    "pubsub-sample",
    "pubsub-source-info",
    "pubsub-timestamp",
]
domain-query = [
    "query-attachment",
    "query-consolidation",
    "query-get",
    "query-queryable",
    "query-reply",
    "query-reply-err",
    "query-selector-parameters",
    "query-source-info",
    "query-target",
    "query-timeout",
]
domain-routing = [
    "routing-client",
    "routing-failover",
    "routing-peer",
    "routing-router",
    "routing-routes",
    "routing-static-routes",
]
domain-runtime = [
    "runtime-async-std",
    "runtime-lwip",
    "runtime-no-std",
    "runtime-tokio",
    "runtime-tokio-uring",
    "runtime-zero-copy",
]
domain-scouting = [
    "scouting-active",
    "scouting-autoconnect",
    "scouting-gossip",
    "scouting-multicast",
    "scouting-passive",
    "scouting-static",
]
domain-session = [
    "session-extauth",
    "session-extcompression",
    "session-extqos",
    "session-extshm",
    "session-multicast",
    "session-resumable",
    "session-stateless-accept",
    "session-unicast-accept",
    "session-unicast-open",
]
domain-storage = [
    "storage-aligner",
    "storage-backend",
    "storage-history",
    "storage-replication",
]
domain-time = [
    "time-hlc",
    "time-ntp64",
    "time-system-clock",
    "time-timestamp-source",
]
domain-transport = [
    "transport-batching",
    "transport-compression",
    "transport-fragmentation",
    "transport-keepalive",
    "transport-link-quic",
    "transport-link-serial",
    "transport-link-tcp",
    "transport-link-tls",
    "transport-link-udp",
    "transport-link-unixsock",
    "transport-link-vsock",
    "transport-link-ws",
    "transport-lowlatency",
    "transport-multicast",
    "transport-shm",
    "transport-unicast",
]

# ============================================================
# Presets — v0.1.0 semver-named contracts
#
# Each preset is an EXPLICIT atomic-feature list. Presets do NOT
# extend other presets — a v0.1.0 contract stays frozen even if the
# atomic catalog grows. v0.2.0 of a preset may change its membership.
# ============================================================

# preset-mcu-minimal — smallest viable MCU client (≈35 atomic features).
# Bare-metal + no_std + UDP unicast + minimal pubsub + literal keyexpr.
# No discovery (scouting-static config-file only), no query, no
# liveliness, no wildcards.
#
# R311bq aligned this list with atomic store §6.1
# (feature-inventory--composable-framework-atomic--preset-catalog/
# 6-presets/6-1-preset-mcu-minimal) by adding `runtime-lwip`. R311bq
# also lands the microbit Layer Q lane (thumbv6m-none-eabi) as a
# spawn-less sync-only deploy that actually runs the preset's lwIP
# UDP path end-to-end on a non-host target. Other §6.1-vs-Cargo
# feature-list divergences (codec-keep-alive vs codec-keepalive,
# pubsub-delete + pubsub-encoding + pubsub-timestamp absent from
# §6.1, etc.) remain as catalog-truthfulness carries for the
# atomic-feature wire-up debt round; this entry closes the runtime-
# lwip gap that was blocking the microbit smoke.
preset-mcu-minimal = [
    "platform-bare-metal",
    "runtime-lwip",
    "runtime-no-std",
    "transport-link-udp",
    "transport-unicast",
    "transport-keepalive",
    "transport-batching",
    "session-unicast-open",
    "session-unicast-accept",
    "codec-frame",
    "codec-keep-alive",
    "codec-init-body",
    "codec-open-body",
    "codec-close",
    "codec-push",
    "codec-declare",
    "declare-subscriber",
    "declare-undeclare",
    "pubsub-put",
    "pubsub-delete",
    "pubsub-sample",
    "pubsub-encoding",
    "pubsub-timestamp",
    "encoding-bytes",
    "encoding-empty",
    "encoding-utf8",
    "keyexpr-literal",
    "keyexpr-canon",
    "keyexpr-includes",
    "keyexpr-intersect",
    "locator-udp",
    "routing-client",
    "scouting-static",
    "time-system-clock",
    "time-ntp64",
]

# preset-mcu-extended — preset-mcu-minimal scope + query + liveliness
# + wildcards + active scouting (≈57 atomic features).
preset-mcu-extended = [
    "platform-bare-metal",
    "runtime-no-std",
    "transport-link-udp",
    "transport-unicast",
    "transport-keepalive",
    "transport-batching",
    "session-unicast-open",
    "session-unicast-accept",
    "codec-frame",
    "codec-keep-alive",
    "codec-init-body",
    "codec-open-body",
    "codec-close",
    "codec-push",
    "codec-declare",
    "codec-request",
    "codec-response",
    "codec-response-final",
    "codec-scout",
    "codec-hello",
    "declare-subscriber",
    "declare-undeclare",
    "declare-queryable",
    "declare-keyexpr",
    "declare-token",
    "declare-final",
    "declare-interest",
    "pubsub-put",
    "pubsub-delete",
    "pubsub-sample",
    "pubsub-encoding",
    "pubsub-timestamp",
    "encoding-bytes",
    "encoding-empty",
    "encoding-utf8",
    "keyexpr-literal",
    "keyexpr-canon",
    "keyexpr-includes",
    "keyexpr-intersect",
    "keyexpr-mapping",
    "keyexpr-wildcard-single",
    "keyexpr-wildcard-double",
    "keyexpr-dollar-star",
    "query-get",
    "query-queryable",
    "query-reply",
    "query-target",
    "query-timeout",
    "query-consolidation",
    "liveliness-token",
    "liveliness-subscriber",
    "locator-udp",
    "routing-client",
    "scouting-static",
    "scouting-active",
    "time-system-clock",
    "time-ntp64",
]

# preset-ap-client — Linux client AP (≈65 atomic features). tokio
# runtime + TCP/UDP + full pubsub/query/liveliness + wildcards.
preset-ap-client = [
    "platform-linux",
    "runtime-tokio",
    "transport-link-tcp",
    "transport-link-udp",
    "transport-unicast",
    "transport-keepalive",
    "transport-batching",
    "transport-fragmentation",
    "session-unicast-open",
    "session-unicast-accept",
    "link-batching",
    "link-frame",
    "link-fragment",
    "codec-frame",
    "codec-fragment",
    "codec-keep-alive",
    "codec-init-body",
    "codec-open-body",
    "codec-close",
    "codec-push",
    "codec-declare",
    "codec-request",
    "codec-response",
    "codec-response-final",
    "codec-scout",
    "codec-hello",
    "declare-subscriber",
    "declare-undeclare",
    "declare-queryable",
    "declare-keyexpr",
    "declare-token",
    "declare-final",
    "declare-interest",
    "pubsub-put",
    "pubsub-delete",
    "pubsub-sample",
    "pubsub-encoding",
    "pubsub-timestamp",
    "encoding-bytes",
    "encoding-empty",
    "encoding-utf8",
    "keyexpr-literal",
    "keyexpr-canon",
    "keyexpr-includes",
    "keyexpr-intersect",
    "keyexpr-mapping",
    "keyexpr-wildcard-single",
    "keyexpr-wildcard-double",
    "keyexpr-dollar-star",
    "query-get",
    "query-queryable",
    "query-reply",
    "query-target",
    "query-timeout",
    "query-consolidation",
    "liveliness-token",
    "liveliness-subscriber",
    "locator-tcp",
    "locator-udp",
    "routing-client",
    "scouting-static",
    "scouting-active",
    "time-system-clock",
    "time-ntp64",
    "time-timestamp-source",
]

# preset-ap-router — preset-ap-client scope + router topology + gossip
# + multicast (≈78 atomic features).
preset-ap-router = [
    "platform-linux",
    "runtime-tokio",
    "transport-link-tcp",
    "transport-link-udp",
    "transport-unicast",
    "transport-multicast",
    "transport-keepalive",
    "transport-batching",
    "transport-fragmentation",
    "session-unicast-open",
    "session-unicast-accept",
    "session-multicast",
    "link-batching",
    "link-frame",
    "link-fragment",
    "codec-frame",
    "codec-fragment",
    "codec-keep-alive",
    "codec-init-body",
    "codec-open-body",
    "codec-close",
    "codec-push",
    "codec-declare",
    "codec-request",
    "codec-response",
    "codec-response-final",
    "codec-scout",
    "codec-hello",
    "codec-join",
    "declare-subscriber",
    "declare-undeclare",
    "declare-queryable",
    "declare-keyexpr",
    "declare-token",
    "declare-final",
    "declare-interest",
    "pubsub-put",
    "pubsub-delete",
    "pubsub-sample",
    "pubsub-encoding",
    "pubsub-timestamp",
    "encoding-bytes",
    "encoding-empty",
    "encoding-utf8",
    "keyexpr-literal",
    "keyexpr-canon",
    "keyexpr-includes",
    "keyexpr-intersect",
    "keyexpr-mapping",
    "keyexpr-wildcard-single",
    "keyexpr-wildcard-double",
    "keyexpr-dollar-star",
    "query-get",
    "query-queryable",
    "query-reply",
    "query-target",
    "query-timeout",
    "query-consolidation",
    "liveliness-token",
    "liveliness-subscriber",
    "liveliness-history",
    "locator-tcp",
    "locator-udp",
    "locator-iface",
    "routing-client",
    "routing-peer",
    "routing-router",
    "routing-routes",
    "routing-static-routes",
    "routing-failover",
    "scouting-static",
    "scouting-active",
    "scouting-multicast",
    "scouting-gossip",
    "scouting-autoconnect",
    "time-system-clock",
    "time-ntp64",
    "time-timestamp-source",
]

# preset-ap-full — kitchen-sink Linux deploy (≈123 atomic features).
# Every active + reserved feature reasonable for an AP host: all
# transport link kinds, all auth methods, all encodings, all storage,
# all session extensions, attachment, advanced QoS.
preset-ap-full = [
    "platform-linux",
    "runtime-tokio",
    "runtime-tokio-uring",
    "runtime-zero-copy",
    "transport-link-tcp",
    "transport-link-tls",
    "transport-link-udp",
    "transport-link-quic",
    "transport-link-unixsock",
    "transport-link-vsock",
    "transport-link-ws",
    "transport-unicast",
    "transport-multicast",
    "transport-keepalive",
    "transport-batching",
    "transport-fragmentation",
    "transport-lowlatency",
    "transport-compression",
    "transport-shm",
    "session-unicast-open",
    "session-unicast-accept",
    "session-multicast",
    "session-resumable",
    "session-stateless-accept",
    "session-extauth",
    "session-extqos",
    "session-extshm",
    "session-extcompression",
    "link-batching",
    "link-frame",
    "link-fragment",
    "link-flow-control",
    "link-tx-cache",
    "codec-frame",
    "codec-fragment",
    "codec-keep-alive",
    "codec-init-body",
    "codec-open-body",
    "codec-close",
    "codec-push",
    "codec-declare",
    "codec-request",
    "codec-response",
    "codec-response-final",
    "codec-scout",
    "codec-hello",
    "codec-join",
    "declare-subscriber",
    "declare-undeclare",
    "declare-queryable",
    "declare-keyexpr",
    "declare-token",
    "declare-final",
    "declare-interest",
    "pubsub-put",
    "pubsub-delete",
    "pubsub-sample",
    "pubsub-encoding",
    "pubsub-timestamp",
    "pubsub-attachment",
    "pubsub-congestion-control",
    "pubsub-express",
    "pubsub-priority",
    "pubsub-source-info",
    "pubsub-allow-loop",
    "query-get",
    "query-queryable",
    "query-reply",
    "query-reply-err",
    "query-target",
    "query-timeout",
    "query-consolidation",
    "query-attachment",
    "query-selector-parameters",
    "query-source-info",
    "attachment-bytes",
    "attachment-encoding-aware",
    "encoding-bytes",
    "encoding-empty",
    "encoding-utf8",
    "encoding-cbor",
    "encoding-json",
    "encoding-protobuf",
    "encoding-mime",
    "keyexpr-literal",
    "keyexpr-canon",
    "keyexpr-includes",
    "keyexpr-intersect",
    "keyexpr-mapping",
    "keyexpr-wildcard-single",
    "keyexpr-wildcard-double",
    "keyexpr-dollar-star",
    "liveliness-token",
    "liveliness-subscriber",
    "liveliness-get",
    "liveliness-history",
    "liveliness-historical-samples",
    "locator-tcp",
    "locator-tls",
    "locator-udp",
    "locator-quic",
    "locator-unixsock",
    "locator-vsock",
    "locator-ws",
    "locator-iface",
    "routing-client",
    "routing-peer",
    "routing-router",
    "routing-routes",
    "routing-static-routes",
    "routing-failover",
    "scouting-static",
    "scouting-active",
    "scouting-multicast",
    "scouting-gossip",
    "scouting-autoconnect",
    "scouting-passive",
    "storage-backend",
    "storage-aligner",
    "storage-history",
    "storage-replication",
    "access-acl",
    "access-downsampling",
    "access-quota",
    "access-extauth-jwt",
    "access-extauth-pubkey",
    "access-extauth-usrpwd",
    "time-system-clock",
    "time-ntp64",
    "time-timestamp-source",
    "time-hlc",
]

# preset-zenoh-cpp — cross-feature consistency anchor matching
# zenoh-cpp public API. Functionally equivalent to preset-ap-full at
# v0.1.0; reserved as a distinct preset so future API drift between
# wz and zenoh-cpp can be tracked without changing preset-ap-full.
preset-zenoh-cpp = [
    "platform-linux",
    "runtime-tokio",
    "runtime-zero-copy",
    "transport-link-tcp",
    "transport-link-tls",
    "transport-link-udp",
    "transport-link-quic",
    "transport-link-unixsock",
    "transport-link-ws",
    "transport-unicast",
    "transport-multicast",
    "transport-keepalive",
    "transport-batching",
    "transport-fragmentation",
    "transport-lowlatency",
    "transport-compression",
    "transport-shm",
    "session-unicast-open",
    "session-unicast-accept",
    "session-multicast",
    "session-extauth",
    "session-extqos",
    "session-extshm",
    "session-extcompression",
    "link-batching",
    "link-frame",
    "link-fragment",
    "link-flow-control",
    "link-tx-cache",
    "codec-frame",
    "codec-fragment",
    "codec-keep-alive",
    "codec-init-body",
    "codec-open-body",
    "codec-close",
    "codec-push",
    "codec-declare",
    "codec-request",
    "codec-response",
    "codec-response-final",
    "codec-scout",
    "codec-hello",
    "codec-join",
    "declare-subscriber",
    "declare-undeclare",
    "declare-queryable",
    "declare-keyexpr",
    "declare-token",
    "declare-final",
    "declare-interest",
    "pubsub-put",
    "pubsub-delete",
    "pubsub-sample",
    "pubsub-encoding",
    "pubsub-timestamp",
    "pubsub-attachment",
    "pubsub-congestion-control",
    "pubsub-express",
    "pubsub-priority",
    "pubsub-source-info",
    "query-get",
    "query-queryable",
    "query-reply",
    "query-reply-err",
    "query-target",
    "query-timeout",
    "query-consolidation",
    "query-attachment",
    "query-selector-parameters",
    "query-source-info",
    "attachment-bytes",
    "attachment-encoding-aware",
    "encoding-bytes",
    "encoding-empty",
    "encoding-utf8",
    "encoding-cbor",
    "encoding-json",
    "encoding-protobuf",
    "encoding-mime",
    "keyexpr-literal",
    "keyexpr-canon",
    "keyexpr-includes",
    "keyexpr-intersect",
    "keyexpr-mapping",
    "keyexpr-wildcard-single",
    "keyexpr-wildcard-double",
    "keyexpr-dollar-star",
    "liveliness-token",
    "liveliness-subscriber",
    "liveliness-get",
    "liveliness-history",
    "liveliness-historical-samples",
    "locator-tcp",
    "locator-tls",
    "locator-udp",
    "locator-quic",
    "locator-unixsock",
    "locator-ws",
    "locator-iface",
    "routing-client",
    "routing-peer",
    "routing-router",
    "routing-routes",
    "routing-static-routes",
    "routing-failover",
    "scouting-static",
    "scouting-active",
    "scouting-multicast",
    "scouting-gossip",
    "scouting-autoconnect",
    "scouting-passive",
    "storage-backend",
    "storage-aligner",
    "storage-history",
    "storage-replication",
    "time-system-clock",
    "time-ntp64",
    "time-timestamp-source",
    "time-hlc",
]

# preset-cortex-m4-default — first production-shape MCU preset for
# Cortex-M4F (thumbv7em-none-eabihf). R311ba lands the cargo-side
# mirror of the atomic catalog §6.7 R311ay registered (56 atomic
# features). wz-runtime-lwip + LwipTime + full wz-codecs catalog
# under the alloc-enabled MCU profile. Composable-framework first
# MCU deploy contract.
#
# §6.7 rationale_bullet `keyexpr-include` is the prose label; the
# cargo feature name is `keyexpr-includes` per §5.6 atomic catalog.
# This preset uses the cargo-truth name.
preset-cortex-m4-default = [
    "platform-bare-metal",
    "runtime-lwip",
    "runtime-no-std",
    "transport-unicast",
    "transport-link-udp",
    "transport-link-tcp",
    "transport-keepalive",
    "transport-fragmentation",
    "locator-udp",
    "locator-tcp",
    "scouting-active",
    "session-unicast-open",
    "link-frame",
    "link-fragment",
    "link-batching",
    "keyexpr-literal",
    "keyexpr-canon",
    "keyexpr-includes",
    "declare-keyexpr",
    "declare-subscriber",
    "declare-queryable",
    "declare-token",
    "declare-undeclare",
    "declare-final",
    "declare-interest",
    "pubsub-put",
    "pubsub-delete",
    "pubsub-sample",
    "pubsub-priority",
    "pubsub-congestion-control",
    "query-get",
    "query-queryable",
    "query-reply",
    "query-target",
    "query-timeout",
    "query-consolidation",
    "liveliness-token",
    "liveliness-subscriber",
    "encoding-empty",
    "encoding-utf8",
    "encoding-bytes",
    "codec-scout",
    "codec-hello",
    "codec-init-body",
    "codec-open-body",
    "codec-close",
    "codec-keep-alive",
    "codec-frame",
    "codec-fragment",
    "codec-declare",
    "codec-push",
    "codec-request",
    "codec-response",
    "codec-response-final",
    "routing-client",
    "time-ntp64",
]
